<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/mediaSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/search_for_any_media"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/mediaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_media" />

    <EditText
        android:id="@+id/songSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/search_for_a_song"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/songButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_song" />

    <EditText
        android:id="@+id/gameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/search_for_a_game"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_game" />

</LinearLayout>
